[add]会員登録、ログイン機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,87 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <!--↑~pack_tagでapp/javascript配下のファイルを参照する-->
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/">LOGO</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggle-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if reviewer_signed_in? %>
+              <li>
+                <%= link_to reviewers_my_page_path(current_reviewer), class: 'nav-link text-light' do %>
+                <i class="fas fa-user"></i> My page
+                <% end %>
+              </li>
+              <li>
+                <%= link_to shops_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-coffee"></i> Shops
+                <% end %>
+              </li>
+              <li>
+                <%= link_to destroy_reviewer_session_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-sign-out-alt"></i> Log out
+                <% end %>
+              </li>
+              <li>
+                <%= link_to about_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-smoking"></i> About
+                <% end %>
+              </li>
+
+              <% elsif admin_signed_in? %>
+              <li>
+                <%= link_to "登録店舗一覧", admin_shops_path, class: 'nav-link text-light' %>
+              </li>
+              <li>
+                <%= link_to "登録会員一覧", admin_reviewers_path, class: 'nav-link text-light' %>
+              </li>
+              <li>
+                <%= link_to "ジャンル一覧", admin_genres_path, class: 'nav-link text-light' %>
+              </li>
+              <li>
+                <%= link_to "ログアウト", destroy_admin_session_path, class: 'nav-link text-light' %>
+              </li>
+              <% else %>
+              <li>
+                <%= link_to root_path,class: 'nav-link text-light' do %>
+                  <i class="fas fa-home"></i> Top
+                <% end %>
+              </li>
+              <li>
+                <%= link_to about_path,class: 'nav-link text-light' do %>
+                  <i class="fas fa-link"></i> About
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_reviewer_registration_path,class: 'nav-link text-light' do %>
+                  <i class="fas fa-user-plus"></i> Sign up
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_reviewer_session_path ,class: 'nav-link text-light' do %>
+                  <i class="fas fa-sign-in-alt"></i> Log in
+                <% end %>
+              </li>
+            <% end %>
+
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
     <%= yield %>
+    </main>
+    <footer></footer>
   </body>
 </html>
