--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <ul class="navbar-nav ml-auto">
               <% if reviewer_signed_in? %>
               <li>
-                <%= link_to reviewers_my_page_path(current_reviewer), class: 'nav-link text-light' do %>
+                <%= link_to reviewers_my_page_path, class: 'nav-link text-light' do %>
                 <i class="fas fa-user"></i> My page
                 <% end %>
               </li>
@@ -33,7 +33,7 @@
                 <% end %>
               </li>
               <li>
-                <%= link_to destroy_reviewer_session_path, class: 'nav-link text-light' do %>
+                <%= link_to destroy_reviewer_session_path, method: :delete, class: 'nav-link text-light' do %>
                 <i class="fas fa-sign-out-alt"></i> Log out
                 <% end %>
               </li>
