--- a/app/views/admin/shops/new.html.erb
+++ b/app/views/admin/shops/new.html.erb
@@ -2,30 +2,36 @@
   <div class='row justify-content-center'>
     <div class='col-md-7 mx-auto'>
       <h3>店舗新規登録</h3>
-      <%= form_with model: @shop, url: admin_shop_path, method: :post do |f| %>
+      <%= form_with model: @shop, url: new_admin_shop_path, method: :post do |f| %>
         <div class="form-group">
           <%= f.label :image, "店舗参考画像" %><br>
           <%= f.file_field :image, accept: "image/*" %>
         </div>
-        
+
         <div class="form-group">
           <%= f.label :name, "店舗名" %><br>
           <%= f.text_field :name, class: 'form-control' %>
         </div>
-        
+
         <div class="form-group">
           <%= f.label :address, "店舗住所" %><br>
           <%= f.text_field :address, class: 'form-control' %>
         </div>
-        
+
         <div class="form-group">
-          支払方法
+          <%= f.collection_check_boxes :shop_payment_id, ShopPayment.all, :id ,:name do |payment| %>
+            <%= payment.label do %>
+              <%= payment.check_box %>
+              <%= payment.name %>
+            <% end %>
+          <% end %>
         </div>
-        
+
         <div class="form-group">
-          ジャンル
+          <%= f.label :genre_id, '店舗ジャンル' %>
+          <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: '選択してください' }, class: 'form-control' %>
         </div>
-        
+      <% end %>
     </div>
   </div>
 </div>
