--- a/app/views/admin/shop_payments/index.html.erb
+++ b/app/views/admin/shop_payments/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::ShopPayments#index</h1>
-<p>Find me in app/views/admin/shop_payments/index.html.erb</p>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+      <h2>支払方法の一覧・追加</h2>
+
+      <!--支払方法追加-->
+      <div class='col-xs-3'>
+        <%= form_with model: @shop_payments, url: admin_shop_payments_path(@shop_payment.id), method: :post do |f| %>
+          <%= f.label :payment_name, "支払い方法" %><br>
+          <%= f.text_field :payment_name, class: "form-control" %><br>
+          <%= f.submit "追加", class: "btn btn-primary btn-block" %>
+        <% end %>
+        </div>
+
+        <!--一覧表示-->
+        <div class='col-xs-9'>
+          <table>
+            <thead>
+              <tr>
+                <th>支払方法</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @shop_payments.each do |payments| %>
+              <tr>
+                <td><%= payments.payment_name %></td>
+                <td><%= link_to "編集", edit_admin_shop_payment_path(payments.id), class: "btn-sm btn-primary" %>
+                <%= link_to "削除", admin_shop_payment_path(payments.id), class: "btn-sm btn-danger", method: :delete %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+
+    </div>
+  </div>
+</div>
