--- a/app/views/admin/homes/_shop_index.html.erb
+++ b/app/views/admin/homes/_shop_index.html.erb
@@ -1,25 +1,34 @@
-<h1>トップページ兼登録店舗一覧</h1>
+<!--トップページ兼登録店舗一覧-->
+<div class='container'>
+    <div clas='row'>
+        <div class='mx-auto col-10'>
+            <h4>登録店舗一覧</h4>
+            <%= link_to new_admin_shop_path, class: "text-secondary" do %>
+              <i class="fas fa-plus"></i> 店舗情報追加
+             <% end %>
+              <table>
+                  <thead>
+                      <tr>
+                          <th scope="col" width="25%"></th>
+                          <th scope="col" width="25%">店名</th>
+                          <th scope="col" width="25%">店舗住所</th>
+                        </tr>
+                  </thead>
 
-<table>
-    <thead>
-        <tr>
-            <th scope="col" width="25%"></th>
-            <th scope="col" width="25%">店名</th>
-            <th scope="col" width="25%">店舗住所</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        <% shops.each do |shop| %>
-        <tr>
-            <td>
-                <%= link_to admin_shop_path(shop) do %>
-                <%= image_tag shop.get_shop_image, size: '50x50' %>
-                <% end %>
-            </td>
-            <td><%= shop.name %></td>
-            <td><%= shop.adrress %></td>
-        </tr>
-    </tbody>
-
-</table>
+                  <tbody>
+                      <% shops.each do |shop| %>
+                      <tr>
+                        <td>
+                          <%= link_to admin_shop_path(shop) do %>
+                            <%= image_tag shop.get_shop_image, size: '50x50' %>
+                          <% end %>
+                        </td>
+                        <td><%= shop.name %></td>
+                        <td><%= shop.adrress %></td>
+                      </tr>
+                      <% end %>
+                  </tbody>
+              </table>
+        </div>
+    </div>
+</div>
