--- a/app/views/admin/shop_payments/index.html.erb
+++ b/app/views/admin/shop_payments/index.html.erb
@@ -3,7 +3,7 @@
     <div class='col-md-3'>
       <h2>支払方法の一覧・追加</h2>
 
-      <!--支払方法追加-->
+      <!--支払方法追加フォーム-->
       <div class='col-xs-3'>
         <%= form_with model: @shop_payments, url: admin_shop_payments_path(@shop_payment.id), method: :post do |f| %>
           <%= f.label :payment_name, "支払い方法" %><br>
@@ -25,8 +25,8 @@
               <% @shop_payments.each do |payments| %>
               <tr>
                 <td><%= payments.payment_name %></td>
-                <td><%= link_to "編集", edit_admin_shop_payment_path(payments.id), class: "btn-sm btn-primary" %>
-                <%= link_to "削除", admin_shop_payment_path(payments.id), class: "btn-sm btn-danger", method: :delete %></td>
+                <td><%= link_to "編集", edit_admin_shop_payment_path(payments.id), class: "ml-4 btn-sm btn-primary" %>
+                    <%= link_to "削除", admin_shop_payment_path(payments.id), class: "btn-sm btn-danger", method: :delete %></td>
               </tr>
               <% end %>
             </tbody>
