--- a/app/views/admin/shops/new.html.erb
+++ b/app/views/admin/shops/new.html.erb
@@ -2,7 +2,7 @@
   <div class='row justify-content-center'>
     <div class='col-md-7 mx-auto'>
       <h3>店舗新規登録</h3>
-      <%= form_with model: @shop, url: new_admin_shop_path, method: :post do |f| %>
+      <%= form_with model: @shop, url: admin_shops_path, method: :post do |f| %>
         <div class="form-group">
           <%= f.label :image, "店舗参考画像" %><br>
           <%= f.file_field :image, accept: "image/*" %>
@@ -19,10 +19,16 @@
         </div>
 
         <div class="form-group">
-          <%= f.collection_check_boxes :shop_payment_id, ShopPayment.all, :id ,:name do |payment| %>
+          <%= f.label :hours, "営業時間" %><br>
+          <%= f.text_field :hours, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :payment_name, "可能な支払方法" %> <br>
+          <%= f.collection_check_boxes(:shop_payment_ids, ShopPayment.all, :id ,:payment_name) do |payment| %>
             <%= payment.label do %>
               <%= payment.check_box %>
-              <%= payment.name %>
+              <%= payment.text %>
             <% end %>
           <% end %>
         </div>
@@ -30,6 +36,10 @@
         <div class="form-group">
           <%= f.label :genre_id, '店舗ジャンル' %>
           <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: '選択してください' }, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit "店舗情報を追加", class: 'btn btn-primary btn-sm' %>
         </div>
       <% end %>
     </div>
