add[admin店舗編集・削除機能/publicコメント機能ビューを編集]

--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <h5>ジャンル名編集・削除</h5>
+  <h5>ジャンル名編集</h5>
   <div class='col-7 mt-5'>
     <%= form_with model: @genre, url: admin_genre_path, method: :patch do |f| %>
     <strong class="mr-5">ジャンル名</strong>
