--- a/app/views/admin/homes/_shop_index.html.erb
+++ b/app/views/admin/homes/_shop_index.html.erb
@@ -24,7 +24,7 @@
                           <% end %>
                         </td>
                         <td><%= shop.name %></td>
-                        <td><%= shop.adrress %></td>
+                        <td><%= shop.address %></td>
                       </tr>
                       <% end %>
                   </tbody>
