--- a/app/views/admin/shops/new.html.erb
+++ b/app/views/admin/shops/new.html.erb
@@ -4,8 +4,8 @@
       <h3>店舗新規登録</h3>
       <%= form_with model: @shop, url: admin_shops_path, method: :post do |f| %>
         <div class="form-group">
-          <%= f.label :image, "店舗参考画像" %><br>
-          <%= f.file_field :image, accept: "image/*" %>
+          <%= f.label :shop_image, "店舗参考画像" %><br>
+          <%= f.file_field :shop_image, accept: "image/*" %>
         </div>
 
         <div class="form-group">
@@ -16,6 +16,16 @@
         <div class="form-group">
           <%= f.label :address, "店舗住所" %><br>
           <%= f.text_field :address, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :access, "アクセス" %><br>
+          <%= f.text_field :access, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :introduction, "備考" %><br>
+          <%= f.text_field :introduction, class: 'form-control' %>
         </div>
 
         <div class="form-group">
