--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,11 +1,17 @@
 <div class='container'>
   <div class='row'>
-    <div class='col d-flex align-items-center" style="height:300px;' >
+    <div class='col' >
         Cigar Spotは喫煙可能な飲食店だけを検索できるサイトです。<br>
         外出先で休憩したくなったとき「喫煙可能なカフェはないかな？」<br>
         飲み会の幹事を任されて「参加者に喫煙者が多いから喫煙可能な居酒屋を探したい」<br>
-        そう思ったことはありませんか？
-        様々な理由で喫煙可能な飲食店を探している方はぜひご活用ください。
+        そう思ったことはありませんか？<br>
+        様々な理由で喫煙可能な飲食店を探している方はぜひご活用ください。<br>
     </div>
+    <div class='col'>
+      <div class='about_photo'>
+        <img src="images/about_photo.jpg">
+      </div>
+    </div>
+
   </div>
 </div>
