--- a/app/views/public/reviewers/show.html.erb
+++ b/app/views/public/reviewers/show.html.erb
@@ -1,2 +1,32 @@
-<h1>レビュアーのマイページ</h1>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+      <h4 class='mt-3'>My page</h4>
+      <%= image_tag @reviewer.get_profile_image, size: '100x100' %>
 
+      <table>
+        <tbody>
+          <tr>
+            <th>ニックネーム</th>
+            <th><%= @reviewer.nickname %></th>
+          </tr>
+          <tr>
+            <th>生年月日</th>
+            <th><%= @reviewer.birthday %></th>
+          </tr>
+          <tr>
+            <td><%= link_to 'レビュー履歴一覧', comments_path %></td>
+          </tr>
+        </tbody>
+      </table>
+      <div class='row'>
+        <% if @reviewer == current_reviewer %>
+          <%= link_to edit_reviewer_path(@reviewer), class: "btn btn-outline-secondary btn-block" do %>
+          <i class="fas fa-cog"></i>
+          <% end %>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
+</div>
