[edit]admin/reviewer_index,genre_index,payment_index,reviewer/my_page,shop_index,shop_show[add]reviewer_comment

--- a/app/views/admin/reviewers/index.html.erb
+++ b/app/views/admin/reviewers/index.html.erb
@@ -1,16 +1,15 @@
 <div class='container'>
   <div class='row'>
-    <h5>会員一覧</h5>
-  </div>
-</div>
+    <div class='mx-auto col-10'>
+    <h4 class='bg-secondary text-light'>会員一覧</h4>
 
 <table>
   <thead>
     <tr>
-      <th>会員ID</th>
-      <th>ニックネーム</th>
-      <th>メールアドレス</th>
-      <th>ステータス</th>
+      <th scope="col" width="25%">会員ID</th>
+      <th scope="col" width="25%">ニックネーム</th>
+      <th scope="col" width="40%">メールアドレス</th>
+      <th scope="col" width="25%"> ステータス</th>
     </tr>
   </thead>
 
@@ -32,3 +31,7 @@
     <% end %>
   </tbody>
 </table>
+
+    </div>
+  </div>
+</div>
