--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class='col'>
       <div class='about_photo'>
-        <img src="images/about_photo.jpg">
+        <%= image_tag 'about_photo.jpg' %>
       </div>
     </div>
 
