--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,31 +1,37 @@
-<div class='container px-5 px-sm-0'>
-  <div class='row'>
+<div class='container'>
+  <div class='row bg-secondary text-light'>
       <h4>店舗ジャンル一覧・追加</h4>
-      <div class='col-xs-3'>
-        <%= form_with model: @genre, url: admin_genres_path(@genre.id), method: :post do |f| %>
-          <%= f.label :name, 'ジャンル名' %> <br>
-          <%= f.text_field :name, class: 'form-control' %> <br>
-          <%= f.submit 'ジャンルを追加', class: 'btn btn-primary btn-block' %>
-        <% end %>
-      </div>
-      <div class='col-xs-9'>
-        <table>
-          <thead>
-            <tr>
-            <th>ジャンル名</th>
-            <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @genres.each do |genre| %>
-            <tr>
-              <td><%= genre.name %></td>
-              <td><%= link_to '編集', edit_admin_genre_path(genre.id), class: 'btn-sm btn-primary' %>
-                  <%= link_to '削除', admin_genre_path(genre.id), class: 'btn-sm btn-danger', method: :delete %></td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
+  </div>
+
+  <!--ジャンル追加フォーム-->
+  <div class='row'>
+    <div class='col-xs-3 mt-3'>
+    <%= form_with model: @genre, url: admin_genres_path(@genre.id), method: :post do |f| %>
+        <%= f.label :name, '追加するジャンル名' %> <br>
+        <%= f.text_field :name, class: 'form-control' %> <br>
+        <%= f.submit '追加', class: 'btn btn-primary btn-sm' %>
+    <% end %>
+    </div>
+
+    <!--ジャンルの一覧表示-->
+    <div class='col-xs-9 ml-5 mt-3'>
+      <table>
+        <thead>
+          <tr>
+          <th>ジャンル名</th>
+          <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+          <tr>
+            <td><%= genre.name %></td>
+            <td><%= link_to '編集', edit_admin_genre_path(genre.id), class: 'ml-4 btn-sm btn-primary' %>
+                <%= link_to '削除', admin_genre_path(genre.id), class: 'btn-sm btn-danger', method: :delete %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
