--- a/app/views/admin/reviewers/edit.html.erb
+++ b/app/views/admin/reviewers/edit.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
-  <h5><%= @reviewer.nickname %>さんの会員ステータスを変更する</h5>
+  <h5 class='bg-secondary text-light'><%= @reviewer.nickname %>さんの会員ステータスを変更する</h5>
   <div class='row'>
-    <div class='col'>
+    <div class='col-3 mt-3'>
       <tr>
       <th>ニックネーム</th>：<th><%= @reviewer.nickname %></td><td scope="col" width="190"></td>
     </tr>
@@ -10,10 +10,10 @@
       <th>メールアドレス</th>：<td><%= @reviewer.email %></td>
     </tr>
     </div>
-    <div class='col'>
+    <div class='col-9 mt-3'>
       <%= form_with model: @reviewer, url: admin_reviewer_path, method: :patch, local: true do |f| %>
     <tr>
-      <th>会員ステータス</th>
+      <th scope="col" width="25%">会員ステータス</th>
       <td><%= f.radio_button :is_deleted, :false %>有効</td>
       <td><%= f.radio_button :is_deleted, :true %>退会</td>
       <td></td>
