--- a/app/views/admin/shop_payments/edit.html.erb
+++ b/app/views/admin/shop_payments/edit.html.erb
@@ -3,8 +3,10 @@
   <div class='col-7 mt-5'>
     <%= form_with model: @shop_payment, url: admin_shop_payment_path, method: :patch do |f| %>
     <strong class="mr-5">支払方法名</strong>
-      <%= f.text_field :name, class: "mr-5" %> <br>
-      <%= f.submit "変更", class: "btn btn-success" %> 
+      <%= f.text_field :payment_name, value: @shop_payment.payment_name, class: "mr-5" %> <br>
+      <%= f.submit "変更", class: "btn btn-success" %>
     <% end %>
   </div>
 </div>
+
+<!--value:で初期値を入れる。編集のビューファイルには書くこと-->
