--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,11 @@
             <ul class="navbar-nav ml-auto">
               <% if reviewer_signed_in? %>
               <li>
-                <%# if @reviewer.nickname != "guestreviewer" %> <!--ゲストユーザーにはマイページリンクを表示しない-->
+                <% if current_reviewer.nickname != "guestreviewer" %> <!--ゲストユーザーにはマイページリンクを表示しない-->
                   <%= link_to reviewers_my_page_path, class: 'nav-link text-secondary' do %>
-                  <i class="fas fa-user"></i> My page
+                    <i class="fas fa-user"></i> My page
                   <% end %>
-                <%# end %>
+                <% end %>
               </li>
               <li>
                 <%= link_to shops_path, class: 'nav-link text-secondary' do %>
