--- a/app/views/public/reviewers/show.html.erb
+++ b/app/views/public/reviewers/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
-      <h4 class='mt-3'>My page</h4>
+      <h4 class='bg-secondary text-light'>My page</h4>
       <%= image_tag @reviewer.get_profile_image, size: '100x100' %>
 
       <table>
@@ -15,18 +15,18 @@
             <th><%= @reviewer.birthday %></th>
           </tr>
           <tr>
-            <td><%= link_to 'レビュー履歴一覧', comments_path %></td>
+            <td><%= link_to 'レビュー履歴一覧', reviewer_comments_path %></td>
           </tr>
         </tbody>
       </table>
-      <div class='row'>
-        <% if @reviewer == current_reviewer %>
-          <%= link_to edit_reviewer_path(@reviewer), class: "btn btn-outline-secondary btn-block" do %>
-          <i class="fas fa-cog"></i>
-          <% end %>
-        <% end %>
-      </div>
-
     </div>
+  </div>
+
+  <div class='row'>
+    <% if @reviewer == current_reviewer %>
+      <%= link_to edit_reviewer_path(@reviewer), class: "btn btn-outline-secondary" do %>
+      <i class="fas fa-cog"></i>
+      <% end %>
+    <% end %>
   </div>
 </div>
