--- a/app/views/public/shops/show.html.erb
+++ b/app/views/public/shops/show.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <h4>店舗情報詳細</h4>
+  <h4 class='bg-secondary text-light'>店舗情報詳細</h4>
   <div class='row'>
     <div class='col'>
       <%= image_tag @shop.get_shop_image, size: "200x200" %>
@@ -27,7 +27,7 @@
           <%# byebug %>
           <td>
             <% @shop_payments.each do |shop_payments| %>
-              <%= shop_payments.id %>
+              <%= shop_payments.payment_name %>
             <% end %>
           </td>
         </tr>
@@ -35,14 +35,34 @@
           <td>店舗ジャンル</td>
           <td><%= @shop.genre.name %></td>
         </tr>
-
-        <!--レビュー-->
-        <% @shop.reviewer_comments.each do |reviewer_comment| %>
-          <p><%= image_tag reviewer_comment.reviewer.get_profile_image, size: "100x100" %></p>
-          <%= reviewer_comment.reviewer.nickname %>
-          <%= reviewer_comment.created_at.strftime('%Y/%m/%d') %><%= reviewer_comment.comment %>
-        <% end %>
       </table>
     </div>
   </div>
+
+  <!--レビュー投稿・一覧-->
+  <div class='row mt-5'>
+    <div class='col'>
+      <%= form_with model: [@shop, @reviewer_comment], local: false do |f| %>
+        <h5 class="bg-secondary text-light">コメント入力フォーム</h5> <br>
+        <%= f.text_area :body, size: "50x10", placeholder: "お店に対するコメントを入力してください" %><br>
+        <%= f.submit "コメントする", class: "btn btn-sm btn-success mt-3" %>
+      <% end %>
+    </div>
+     <!--TODO: レビュー一覧-->
+    <div class='col'>
+      <h5 class="bg-secondary text-light">コメント一覧</h5>
+      <% @shop.reviewer_comments.where.not(id: nil).each do |reviewer_comment| %>
+        <%= image_tag reviewer_comment.reviewer.get_profile_image, size: "100x100" %>
+        <%= reviewer_comment.reviewer.nickname %>
+        <%= reviewer_comment.created_at.strftime('%Y/%m/%d') %>  <%= reviewer_comment.body %>
+
+        <!--current_reviewerには編集・削除ボタンを出す-->
+        <% if reviewer_comment.reviewer == current_reviewer %>
+          <%= link_to "編集", edit_reviewer_comment_path(reviewer_comment), class: "btn btn-sm btn-success" %>
+          <%= link_to "削除", reviewer_comment_path(reviewer_comment.shop_id, reviewer_comment), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-sm btn-danger" %>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+
 </div>
