--- a/app/views/public/reviewer_comments/_index.html.erb
+++ b/app/views/public/reviewer_comments/_index.html.erb
@@ -1,32 +1,36 @@
+<!--自分の投稿だけ表示させたい-->
 <div class='container'>
   <div class='row'>
-    <div class='mx-auto col-10'>
-    <h4 class='bg-secondary text-light'>レビュー履歴</h4>
-
-<table>
-  <thead>
-    <tr>
-      <th scope="col" width="25%">コメント内容</th>
-      <th scope="col" width="25%">登録済みタグ</th>
-      <th scope="col" width="25%"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% reviewer_comments.each do |reviewer_comment| %>
-    <tr>
-      <td><%= reviewer_comment.body %></td>
-      <td>タグ</td>
-      <td>
-        <% if reviewer_comment.reviewer == current_reviewer %>
-          <%= link_to '編集', edit_reviewer_comment_path(reviewer_comment), class: "btn btn-sm btn-success" %></td>
-          <%= link_to '削除', reviewer_comment_path(reviewer_comment), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-sm btn-danger"%></td>
+    <div class='col'>
+      <h5 class="bg-secondary text-light">コメント一覧</h5>
+      <% shop.reviewer_comments.where.not(id: nil).each do |reviewer_comment| %>
+      <div class='col'>
+        <%= image_tag reviewer_comment.reviewer.get_profile_image, size: "100x100" %>
+        <%= reviewer_comment.reviewer.nickname %>
+        <%= reviewer_comment.created_at.strftime('%Y/%m/%d') %>
+        <%= link_to reviewer_comment_path(reviewer_comment.id) do %>
+        <%= reviewer_comment.body.truncate(10, omission: "...") %> <!--長い文字列を省略する-->
         <% end %>
-      </td>
-    <% end %>
-  </tbody>
-</table>
+        <!--★評価の表示-->
+        <% if reviewer_comment.star_rate == 1.0 %>
+          ★☆☆☆☆
+          <% elsif reviewer_comment.star_rate == 2.0 %>
+            ★★☆☆☆
+          <% elsif reviewer_comment.star_rate == 3.0 %>
+            ★★★☆☆
+          <% elsif reviewer_comment.star_rate == 4.0 %>
+            ★★★★☆
+          <% elsif reviewer_comment.star_rate == 5.0 %>
+            ★★★★★
+        <% end %>
 
+        <!--current_reviewerには編集・削除ボタンを出す-->
+        <% if reviewer_comment.reviewer == current_reviewer %>
+          <%= link_to "編集", edit_reviewer_comment_path(reviewer_comment), class: "btn btn-sm btn-success" %>
+          <%= link_to "削除", reviewer_comment_path(reviewer_comment), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-sm btn-danger" %>
+        <% end %>
+      </div>
+      <% end %>
     </div>
   </div>
 </div>
