--- a/app/views/public/reviewer_comments/show.html.erb
+++ b/app/views/public/reviewer_comments/show.html.erb
@@ -12,7 +12,7 @@
         </tr>
         <tr>
           <td class="border border-0"><h5>レビュー詳細</h5></td>
-          <td class="border border-0"><%#= @shop.reviewer_comment.body %></td>
+          <td class="border border-0"><%= @reviewer_comment.body %></td>
         </tr>
         <tr>
           <td class="border border-0" scope="col" width="200"><h5>投稿日時</h5></td>
@@ -21,15 +21,15 @@
         <tr>
           <td class="border border-0"><h5>評価</h5></td>
           <td class="border border-0">
-            <% if @reviewer_comment_new.star_rate == 1.0 %>
+            <% if @reviewer_comment.star_rate == 1.0 %>
                 ★☆☆☆☆
-              <% elsif @reviewer_comment_new.star_rate == 2.0 %>
+              <% elsif @reviewer_comment.star_rate == 2.0 %>
                 ★★☆☆☆
-              <% elsif @reviewer_comment_new.star_rate == 3.0 %>
+              <% elsif @reviewer_comment.star_rate == 3.0 %>
                 ★★★☆☆
-              <% elsif @reviewer_comment_new.star_rate == 4.0 %>
+              <% elsif @reviewer_comment.star_rate == 4.0 %>
                 ★★★★☆
-              <% elsif @reviewer_comment_new.star_rate == 5.0 %>
+              <% elsif @reviewer_comment.star_rate == 5.0 %>
                 ★★★★★
             <% end %>
           </td>
@@ -37,7 +37,7 @@
         <tr>
           <td class="border border-0"><h5>タグ</h5></td>
           <td class="border border-0">
-            <% @reviewer_comment_new.tags.each do |tag| %>
+            <% @reviewer_comment.tags.each do |tag| %>
               <%= tag.name %>
             <% end %>
           </td>
