--- a/app/views/public/reviewers/show.html.erb
+++ b/app/views/public/reviewers/show.html.erb
@@ -34,7 +34,7 @@
         <!--自分のレビュー一覧にしたい-->
         <div class='col-md-8 offset-md-1'>
           <h2>Reviews</h2>
-          <%= render 'public/reviewer_comments/index', shop: @shop, reviewer_comments: @reviewer_comments, reviewer_comment: @reviewer_comment, reviewer_comment_tag: @reviewer_comment_tag %>
+          <%= render 'public/reviewer_comments/index', reviewer_comments: @reviewer_comments %>
         </div>
   </div>
 </div>
